--- a/js/package.json
+++ b/js/package.json
@@ -31,13 +31,17 @@
     "gulp-ng-annotate": "^1.1.0",
     "gulp-phpunit": "^0.12.1",
     "gulp-sourcemaps": "^1.6.0",
+    "gulp-typescript": "^2.11.0",
     "gulp-uglify": "^1.5.2",
+    "jasmine-core": "^2.4.1",
     "jshint": "^2.9.1",
     "karma": "^0.13.19",
     "karma-chrome-launcher": "^0.2.2",
     "karma-coverage": "^0.5.3",
     "karma-firefox-launcher": "^0.1.7",
-    "karma-jasmine": "^0.3.6"
+    "karma-jasmine": "^0.3.6",
+    "karma-typescript-preprocessor": "0.0.21",
+    "typescript": "^1.7.5"
   },
   "dependencies": {}
 }
